--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ itsdangerous==2.0.1
 Jinja2==3.0.3
 MarkupSafe>=2.0
 Werkzeug==0.15.5
-numpy==1.23.5
+numpy>=2.1.0
 scipy>=0.15.1
 scikit-learn==1.2.2
 matplotlib>=1.4.3
@@ -12,3 +12,4 @@ pandas==1.5.3
 Cython>= 0.28.5
 joblib==1.2.0
 --only-binary=:all:
+
