--- a/requirements.txt
+++ b/requirements.txt
@@ -6,10 +6,11 @@ MarkupSafe>=2.0
 Werkzeug==0.15.5
 numpy>=2.1.0
 scipy>=0.15.1
-scikit-learn==1.2.2
+scikit-learn>=1.5.2
 matplotlib>=1.4.3
-pandas==1.5.3
+pandas>=1.5.3
 Cython>= 0.28.5
 joblib==1.2.0
 --only-binary=:all:
+
 
